# llm-mechanics

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: train.py
src/llm_mechanics/: nn.py  viz.py
src/llm_mechanics/autograd/: engine.py
tests/: test_engine.py  test_nn.py
